// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en <GifGrid /> debe de mostrar items cuando se cargan imágenes usando useFetchGifs 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
    puppy
  </h3>
  <div
    className="w3-row-padding"
  >
    <GifGridItem
      id="ABC"
      key="ABC"
      title="Titulo"
      url="https://imagenes/imagen.jpg"
    />
    <GifGridItem
      id="DEF"
      key="DEF"
      title="Titulo2"
      url="https://imagenes/imagen2.jpg"
    />
  </div>
</Fragment>
`;

exports[`Pruebas en <GifGrid /> debe mostrar <GifGrid /> correctamente 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
    puppy
  </h3>
  <p
    className="animate__animated animate__flash"
  >
    Loading
  </p>
  <div
    className="w3-row-padding"
  />
</Fragment>
`;
